fix: Add background to html element in CSS to enable correct dark mode toggle within Chrome

--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,7 @@
 
 html {
     font-family: "Inter", sans-serif;
+    background: white;
 }
 
 body {
